--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header>
         <aside id="left-side-bar">
             <div id="side-bar">
-                <div class="left-bar"><a href="vehicle-1.html"><img style="width:40px; height:16px;" src="images/hyundai-logo.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-1.html"><img style="width:40px; height:16px;" src="hyundai-logo.svg"></a></div>
                 <div class="left-bar"><a href="vehicle-2.html">12345</a></div>
                 <div class="left-bar"><a href="vehicle-3.html">12345</a></div>
                 <div class="left-bar"><a href="#">12345</a></div>
@@ -33,7 +33,7 @@
             <div id="main-content">
                 <h2 style="padding-bottom: 10px; color: rgb(0, 255, 0);">Today Hot Issue</h2>
                 <p class="main-title">현대자동차,'포니와 함께한 시간'사진 공모전 시상식 개최</p>
-                <img src="images/vehicle-1-image.jpeg" alt="">
+                <img src="vehicle-1-image.jpeg" alt="">
                 <div>
                 포니와의 특별한 인연 소개한 심포니 씨가 대상 수상
                 현대자동차는 우리나라 첫 국산차 포니가 걸어온 길을 돌아보는 사진 공모전 ‘포니와 함께한 시간’을 마무리했다고 23일 밝혔다.
