--- a/vehicle-2.html
+++ b/vehicle-2.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
 </head>
@@ -19,16 +20,16 @@
         </header>
         <aside id="left-side-bar">
             <div id="side-bar">
-                <div class="left-bar"><a href="vehicle-1.html">12345</a></div>
-                <div class="left-bar"><a style="color: #37C6D0;" href="#">12345</a></div>
-                <div class="left-bar"><a href="vehicle-3.html">12345</a></div>
-                <div class="left-bar"><a href="#">12345</a></div>
-                <div class="left-bar"><a class="last-kid" href="#">12345</a></div>
+                <div class="left-bar"><a href="vehicle-1.html"><img style="width:70px; height:46.797px" src="hyundai-logo2.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-2.html"><img style="width:70px; height:46.797px" src="benz-logo.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-3.html"><img style="width:70px; height:46.797px" src="bmw-logo.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-4.html"><img style="width:70px; height:46.797px" src="audi-logo.svg"></a></div>
+                <div class="left-bar"><a class="last-kid" href="vehicle-5.html"><img style="width:70px; height:46.797px" src="polestar-logo.svg"></a></div>
             </div>
         </aside>
         <section id="contents">
             <div id="main-content">
-                <div>
+                <div id="content-text">
                     포니와의 특별한 인연 소개한 심포니 씨가 대상 수상
                     현대자동차는 우리나라 첫 국산차 포니가 걸어온 길을 돌아보는 사진 공모전 ‘포니와 함께한 시간’을 마무리했다고 23일 밝혔다.
                     현대차는 3600여 건의 응모작과 사연을 접수해 대상 1명, 우수상 2명, 장려상 4명 등 총 7명을 시상했다.
