--- a/vehicle-2.html
+++ b/vehicle-2.html
@@ -29,15 +29,39 @@
         </aside>
         <section id="contents">
             <div id="main-content">
-                <div id="content-text">
-                    포니와의 특별한 인연 소개한 심포니 씨가 대상 수상
-                    현대자동차는 우리나라 첫 국산차 포니가 걸어온 길을 돌아보는 사진 공모전 ‘포니와 함께한 시간’을 마무리했다고 23일 밝혔다.
-                    현대차는 3600여 건의 응모작과 사연을 접수해 대상 1명, 우수상 2명, 장려상 4명 등 총 7명을 시상했다.
-                    대상은 포니를 좋아한 아버지가 지어준 이름으로 살아온 사연과 사진을 공모한 심포니 씨에게 돌아갔다. 
-                    대상 수상자에게는 아이오닉 5가 증정됐다.
-                    포니의 역사와 실제 차량 모습을 볼 수 있는 ‘포니의 시간’ 전시는 오는 10월 8일까지 서울 강남구 현대모터스튜디오 서울에서 진행된다.
-                    현대차 관계자는 “포니는 대한민국 국민에게 자동차를 넘어 옛 시절을 추억하게 하는 매개체”라며 
-                    “이번 전시와 공모전을 통해 많은 분들이 포니의 향수를 다시 한 번 느끼길 바란다”고 말했다.
+                <p class="main-title">벤츠 마케팅 총괄, "韓 고객 피드백…E클래스에 담았다"</p>
+                <img src="benz-news1.jpeg">
+                <div class="content-text">
+                    "한국에서는 유럽보다 더 많은 여성 운전자가 E클래스를 타고 있습니다. 이들이 무엇보다 자동차의 편안함,
+                     운전자 보조 시스템, 인테리어 등을 중시한다는 것에 집중했죠."
+                    브리타 제거 메르세데스-벤츠 승용 부문 마케팅·세일즈 총괄은 지난 14일(현지시각) 오스트리아 빈에서 
+                    진행한 기자 간담회에서 새로 출시한 신형 '더 뉴 E클래스'에 대해 "한국 고객은 세단 모델의 선호도가 굉장히 높다"고 밝혔다.
+                    메르세데스-벤츠그룹 이사회 구성원이기도 한 제거 총괄은 지난 2013년부터 2015년까지 벤츠코리아 대표를 
+                    지내 한국 시장을 누구보다 잘 아는 경영진으로 꼽힌다. 제거 총괄이 벤츠코리아를 맡았을 당시 벤츠는 사상 
+                    처음 한국에서 매출 2조원, 판매대수 1만5000대를 돌파했다.
+                    제거 총괄은 최근 출시한 벤츠의 신형 E클래스에 대해 "운전자와 탑승자 모두가 자동차와 쉽고 편하게 소통하고,
+                     차량은 운전자를 위해 더 많은 것을 하도록 만들었다"며 "E클래스만의 전통적인 요소와 새로운 기능을 조화롭게 탑재하고 있다"고 했다.
+                    이어 "(신차를 출시할 때) 소비자들의 요구와 피드백을 취합해 차에 적용해 출시하는 것이 관례"라며 "중요한 
+                    시장 중 하나인 한국 고객의 피드백도 당연히 포함했다"고 강조했다.
+                </div>
+                <img src="benz-news2.jpeg">
+                <div class="content-text">
+                    제거 총괄은 신형 E클래스의 혁신 기술에 대해 조수석까지 디스플레이를 연장한 '슈퍼스크린'과 
+                    플러그인하이브리드(PHEV) 모델의 전기모드 주행거리가 100㎞로 늘어난 점을 첫 손가락에 꼽았다.
+                    또 인공지능(AI)이 운전자의 습관을 분석해 자동으로 원하는 점을 제안하는 '루틴' 기능도 강점이라고 언급했다.
+                    그는 "미래에는 자동차가 운전자가 원하는 것을 찾아내고, 운전자는 그만큼 생각할 필요가 없어지게 될 것"이라며 
+                    "이것이 바로 AI의 영역이며, 신형 E클래스가 얼마나 지능적인 자동차라는 것을 보여준다"고 말했다.
+                    제거는 메르세데스-벤츠의 전동화 전략에 대해서도 밝혔다. 그는 "2025년부터는 '전동화 온리(Electric Only)' 
+                    전략을 중심으로 전기차 전용 플랫폼을 기반으로 한 순수 전기차를 출시할 것"이라며 
+                    "기존 MFA 플랫폼을 대체하는 신형 모듈러 플랫폼인 MMA 기반 모델도 선보일 예정"이라고 말했다.
+                    그는 다만 "현재 MMA 플랫폼에 대해서는 전동화를 최우선(electric first)으로 둘 것이지만,
+                    전동화만 추진하는 것(electric only)은 아니다"고 전했다. 온라인 판매 계획에 대해 
+                    그는 "2025년까지 전체 판매량의 25%를 온라인 세일즈로 판매할 것이지만, 
+                    딜러를 배제하는 개념은 아니다"며 온라인과 오프라인이 자연스럽게 연계되는 방식을 제시했다.
+                    제거 총괄은 "E클래스는 한국 시장에서 가장 많이 팔리는 모델"이라며 "한국은 매력적인 소비자와 
+                    환상적인 딜러십을 보유하고 있다"고 했다. 이어 "지난 10년간 그래왔던 것처럼 앞으로도 
+                    한국 고객이 만족할 수 있도록 최선을 다할 것"이라고 강조했다.
+
                 </div>
             </div>
         </section>
