--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@
         <section id="contents">
             <div id="main-content">
                 <h2 style="padding-bottom: 10px; color: rgb(0, 255, 0);">Today Hot Issue</h2>
-                <p class="main-title">현대자동차,'포니와 함께한 시간'사진 공모전 시상식 개최</p>
-                <img src="vehicle-1-image.jpeg" alt="">
-                <div id="content-text">
-                포니와의 특별한 인연 소개한 심포니 씨가 대상 수상
-                현대자동차는 우리나라 첫 국산차 포니가 걸어온 길을 돌아보는 사진 공모전 ‘포니와 함께한 시간’을 마무리했다고 23일 밝혔다.
-                현대차는 3600여 건의 응모작과 사연을 접수해 대상 1명, 우수상 2명, 장려상 4명 등 총 7명을 시상했다.
-                대상은 포니를 좋아한 아버지가 지어준 이름으로 살아온 사연과 사진을 공모한 심포니 씨에게 돌아갔다. 
-                대상 수상자에게는 아이오닉 5가 증정됐다.
-                포니의 역사와 실제 차량 모습을 볼 수 있는 ‘포니의 시간’ 전시는 오는 10월 8일까지 서울 강남구 현대모터스튜디오 서울에서 진행된다.
-                현대차 관계자는 “포니는 대한민국 국민에게 자동차를 넘어 옛 시절을 추억하게 하는 매개체”라며 
-                “이번 전시와 공모전을 통해 많은 분들이 포니의 향수를 다시 한 번 느끼길 바란다”고 말했다.
+                <div class="index-contents">
+                    <div class="each-content">
+                        <img src="index-news1.jpeg">
+                        <div class="caption">
+                            <p>현대·기아, GM·벤츠·BMW와 '충전동맹'…美 3만곳에 충전소</p>
+                        </div>
+                    </div>
+                    <div class="each-content">
+                        <img src="index-news2.jpeg">
+                        <div class="caption">
+                            <p>현대자동차, '더 뉴 아반떼 N' 26일 출시</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
