--- a/vehicle-5.html
+++ b/vehicle-5.html
@@ -34,7 +34,7 @@
             <div id="main-content">
                 <p class="main-title">현대자동차,'포니와 함께한 시간'사진 공모전 시상식 개최</p>
                 <img src="vehicle-1-image.jpeg" alt="">
-                <div id="content-text">
+                <div class="content-text">
                 포니와의 특별한 인연 소개한 심포니 씨가 대상 수상
                 현대자동차는 우리나라 첫 국산차 포니가 걸어온 길을 돌아보는 사진 공모전 ‘포니와 함께한 시간’을 마무리했다고 23일 밝혔다.
                 현대차는 3600여 건의 응모작과 사연을 접수해 대상 1명, 우수상 2명, 장려상 4명 등 총 7명을 시상했다.
