--- a/index.html
+++ b/index.html
@@ -46,6 +46,30 @@
                             <p>현대자동차, '더 뉴 아반떼 N' 26일 출시</p>
                         </div>
                     </div>
+                    <div class="each-content">
+                        <img src="index-news3.jpeg">
+                        <div class="caption">
+                            <p>BMW코리아, 신모델 출시로 수입차 1위 흥행 이어간다</p>
+                        </div>
+                    </div>
+                    <div class="each-content">
+                        <img src="index-news4.jpeg">
+                        <div class="caption">
+                            <p>"라인업 강화"…아우디, 연간 판매량 얼마나 늘어날까</p>
+                        </div>
+                    </div>
+                    <div class="each-content">
+                        <img src="index-news5.jpeg">
+                        <div class="caption">
+                        <p>'10% 할인+부분변경'…하반기 반전 노리는 폴스타</p>
+                        </div>
+                    </div>
+                    <div class="each-content">
+                        <img src="index-news6.jpeg">
+                        <div class="caption">
+                            <p>벤츠 전기 SUV ‘왕’…고급스러운 승차감 돋보여</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
