--- a/K-pop-main.html
+++ b/K-pop-main.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <header id="header">
-                <h1>EastPillar News</h1>
+            <h1>EastPillar News</h1>
             <div id="top-menubar">
                 <div class="top-menu"><a style="color: #37C6D0;"href="index.html">자동차 뉴스</a></div>
                 <div class="top-menu"><a href="K-pop-main.html">K-pop 뉴스</a></div>
@@ -21,11 +21,11 @@
         </header>
         <aside id="left-side-bar">
             <div id="side-bar">
-                <div class="left-bar"><a href="vehicle-1.html"><img src="hyundai-logo2.svg"></a></div>
-                <div class="left-bar"><a href="vehicle-2.html"><img src="benz-logo.svg"></a></div>
-                <div class="left-bar"><a href="vehicle-3.html"><img src="bmw-logo.svg"></a></div>
-                <div class="left-bar"><a href="vehicle-4.html"><img src="audi-logo.svg"></a></div>
-                <div class="left-bar"><a class="last-kid" href="vehicle-5.html"><img src="polestar-logo.svg"></a></div>
+                <div class="left-bar"><a href="k-pop-1.html"><img src="LESSERAFIM-logo.svg"></a></div>
+                <div class="left-bar"><a href="k-pop-2.html"><img src="I-dle-logo.svg"></a></div>
+                <div class="left-bar"><a href="k-pop-3.html"><img src="aespa-logo.svg"></a></div>
+                <div class="left-bar"><a href="k-pop-4.html"><img src="new-jeans-logo.svg"></a></div>
+                <div class="left-bar"><a class="last-kid" href="k-pop-5.html"><img src="ive-logo.svg"></a></div>
             </div>
         </aside>
         <section id="contents">
@@ -33,39 +33,39 @@
                 <h2 style="padding-bottom: 10px; color: rgb(0, 255, 0);">Today Hot Issue</h2>
                 <div class="index-contents">
                     <div class="each-content">
-                        <img src="index-news1.jpeg">
+                        <img src="k-pop-news1.jpeg">
                         <div class="caption">
-                            <p>현대·기아, GM·벤츠·BMW와 '충전동맹'…美 3만곳에 충전소</p>
+                            <p>르세라핌, '나이트 댄서' 이마세와 협업…'쥬얼리'</p>
                         </div>
                     </div>
                     <div class="each-content">
-                        <img src="index-news2.jpeg">
+                        <img src="k-pop-news2.jpeg">
                         <div class="caption">
-                            <p>현대자동차, '더 뉴 아반떼 N' 26일 출시</p>
+                            <p>AT마드리드전, 아이돌 초대…(여자)아이들, 하프라인 공연</p>
                         </div>
                     </div>
                     <div class="each-content">
-                        <img src="index-news3.jpeg">
+                        <img src="k-pop-news3.jpeg">
                         <div class="caption">
-                            <p>BMW코리아, 신모델 출시로 수입차 1위 흥행 이어간다</p>
+                            <p>B'H.O.T→에스파' SM, 美 롤링스톤 선정 'K팝 역사상 가장 위대한 100곡' 최다 랭크</p>
                         </div>
                     </div>
                     <div class="each-content">
-                        <img src="index-news4.jpeg">
+                        <img src="k-pop-news4.jpeg">
                         <div class="caption">
-                            <p>"라인업 강화"…아우디, 연간 판매량 얼마나 늘어날까</p>
+                            <p>뉴진스 뮤비에 출연한 양조위, 이상하고 놀라운 1년</p>
                         </div>
                     </div>
                     <div class="each-content">
-                        <img src="index-news5.jpeg">
+                        <img src="k-pop-news5.jpeg">
                         <div class="caption">
-                        <p>'10% 할인+부분변경'…하반기 반전 노리는 폴스타</p>
+                        <p>‘4세대 음원퀸’ 아이브가 돌아온다! “10월 컴백 준비 중”</p>
                         </div>
                     </div>
                     <div class="each-content">
-                        <img src="index-news6.jpeg">
+                        <img src="k-pop-news6.jpeg">
                         <div class="caption">
-                            <p>벤츠 전기 SUV ‘왕’…고급스러운 승차감 돋보여</p>
+                            <p>블랙핑크·스벅 손잡자 '인기 폭발'…반나절 만에 동났다</p>
                         </div>
                     </div>
                 </div>
