--- a/vehicle-1.html
+++ b/vehicle-1.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>eastpillar news</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div id="container">
-        <h1>EastPillar News</h1>
         <header id="header">
+            <h1>EastPillar News</h1>
             <div id="top-menubar">
                 <div class="top-menu"><a style="color: #37C6D0;"href="index.html">자동차 뉴스</a></div>
-                <div class="top-menu"><a href="#">12345</a></div>
+                <div class="top-menu"><a href="K-pop-main.html">K-pop 뉴스</a></div>
                 <div class="top-menu"><a href="#">12345</a></div>
                 <div class="top-menu"><a href="#">12345</a></div>
                 <div class="top-menu"><a class="last-kid" href="#">12345</a></div>
@@ -43,6 +43,15 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div id="down-container">
+                <ul>
+                    <li>제작자: eastpillar</li>
+                    <li>문의 대표 번호: 010-1234-4321</li>
+                    <li>본 페이지는 수익을 창출하지 않습니다.</li>
+                </ul>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
