--- a/vehicle-2.html
+++ b/vehicle-2.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>eastpillar news</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div id="container">
-        <h1>EastPillar News</h1>
         <header id="header">
+            <h1>EastPillar News</h1>
             <div id="top-menubar">
                 <div class="top-menu"><a style="color: #37C6D0;" href="index.html">자동차 뉴스</a></div>
-                <div class="top-menu"><a href="#">12345</a></div>
+                <div class="top-menu"><a href="K-pop-main.html">K-pop 뉴스</a></div>
                 <div class="top-menu"><a href="#">12345</a></div>
                 <div class="top-menu"><a href="#">12345</a></div>
                 <div class="top-menu"><a class="last-kid" href="#">12345</a></div>
@@ -20,11 +20,11 @@
         </header>
         <aside id="left-side-bar">
             <div id="side-bar">
-                <div class="left-bar"><a href="vehicle-1.html"><img style="width:70px; height:46.797px" src="hyundai-logo2.svg"></a></div>
-                <div class="left-bar"><a href="vehicle-2.html"><img style="width:70px; height:46.797px" src="benz-logo.svg"></a></div>
-                <div class="left-bar"><a href="vehicle-3.html"><img style="width:70px; height:46.797px" src="bmw-logo.svg"></a></div>
-                <div class="left-bar"><a href="vehicle-4.html"><img style="width:70px; height:46.797px" src="audi-logo.svg"></a></div>
-                <div class="left-bar"><a class="last-kid" href="vehicle-5.html"><img style="width:70px; height:46.797px" src="polestar-logo.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-1.html"><img src="hyundai-logo2.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-2.html"><img src="benz-logo.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-3.html"><img src="bmw-logo.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-4.html"><img src="audi-logo.svg"></a></div>
+                <div class="left-bar"><a class="last-kid" href="vehicle-5.html"><img src="polestar-logo.svg"></a></div>
             </div>
         </aside>
         <section id="contents">
@@ -65,6 +65,15 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div id="down-container">
+                <ul>
+                    <li>제작자: eastpillar</li>
+                    <li>문의 대표 번호: 010-1234-4321</li>
+                    <li>본 페이지는 수익을 창출하지 않습니다.</li>
+                </ul>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
