--- a/vehicle-4.html
+++ b/vehicle-4.html
@@ -9,13 +9,11 @@
 </head>
 <body>
     <div id="container">
-        <div id="top-container">
-        <h1>EastPillar News</h1>
-        </div>
         <header id="header">
+            <h1>EastPillar News</h1>
             <div id="top-menubar">
                 <div class="top-menu"><a style="color: #37C6D0;"href="index.html">자동차 뉴스</a></div>
-                <div class="top-menu"><a href="#">12345</a></div>
+                <div class="top-menu"><a href="K-pop-main.html">K-pop 뉴스</a></div>
                 <div class="top-menu"><a href="#">12345</a></div>
                 <div class="top-menu"><a href="#">12345</a></div>
                 <div class="top-menu"><a class="last-kid" href="#">12345</a></div>
@@ -23,32 +21,40 @@
         </header>
         <aside id="left-side-bar">
             <div id="side-bar">
-                <div class="left-bar"><a href="vehicle-1.html"><img style="width:70px; height:46.797px" src="hyundai-logo2.svg"></a></div>
-                <div class="left-bar"><a href="vehicle-2.html"><img style="width:70px; height:46.797px" src="benz-logo.svg"></a></div>
-                <div class="left-bar"><a href="vehicle-3.html"><img style="width:70px; height:46.797px" src="bmw-logo.svg"></a></div>
-                <div class="left-bar"><a href="vehicle-4.html"><img style="width:70px; height:46.797px" src="audi-logo.svg"></a></div>
-                <div class="left-bar"><a class="last-kid" href="vehicle-5.html"><img style="width:70px; height:46.797px" src="polestar-logo.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-1.html"><img src="hyundai-logo2.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-2.html"><img src="benz-logo.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-3.html"><img src="bmw-logo.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-4.html"><img src="audi-logo.svg"></a></div>
+                <div class="left-bar"><a class="last-kid" href="vehicle-5.html"><img src="polestar-logo.svg"></a></div>
             </div>
         </aside>
         <section id="contents">
             <div id="main-content">
-                <p class="main-title">현대자동차,'포니와 함께한 시간'사진 공모전 시상식 개최</p>
-                <img src="vehicle-1-image.jpeg" alt="">
+                <p class="main-title">아우디, 407마력 ‘더 뉴 아우디 RS 3’ 출시</p>
+                <img src="audi-news1.jpeg" alt="">
                 <div class="content-text">
-                포니와의 특별한 인연 소개한 심포니 씨가 대상 수상
-                현대자동차는 우리나라 첫 국산차 포니가 걸어온 길을 돌아보는 사진 공모전 ‘포니와 함께한 시간’을 마무리했다고 23일 밝혔다.
-                현대차는 3600여 건의 응모작과 사연을 접수해 대상 1명, 우수상 2명, 장려상 4명 등 총 7명을 시상했다.
-                대상은 포니를 좋아한 아버지가 지어준 이름으로 살아온 사연과 사진을 공모한 심포니 씨에게 돌아갔다. 
-                대상 수상자에게는 아이오닉 5가 증정됐다.
-                포니의 역사와 실제 차량 모습을 볼 수 있는 ‘포니의 시간’ 전시는 오는 10월 8일까지 서울 강남구 현대모터스튜디오 서울에서 진행된다.
-                현대차 관계자는 “포니는 대한민국 국민에게 자동차를 넘어 옛 시절을 추억하게 하는 매개체”라며 
-                “이번 전시와 공모전을 통해 많은 분들이 포니의 향수를 다시 한 번 느끼길 바란다”고 말했다.
+                    아우디코리아가 초고성능 콤팩트 세단 ‘더 뉴 아우디 RS 3(사진)’를 27일부터 판매한다고 밝혔다.
+                    아우디 RS 모델은 ‘Renn Sport( Racing Sport)’의 약자로 기술적 한계에 대한 아우디의 도전을 상징한다.
+                     아우디의 고성능 차량 생산 및 기술 개발을 담당하는 자회사 아우디 스포트 GmbH가 생산하는 고성능 라인업이다.
+                    이번에 선보이는 더 뉴 아우디 RS 3는 국내 시장에 처음 선보이는 모델이다.
+                     2.5ℓ 5기통 가솔린 직분사 터보차저(TFSI) 엔진과 7단 S트로닉 자동변속기를 탑재해 최고출력 407마력,
+                      최대토크 50.99㎏.m의 강력한 힘을 발휘한다.
+                    정지상태에서 시속 100㎞까지 가속하는데 소요되는 시간은 3.8초다.
+                     최고 속도는 시속 280㎞, 연비는 복합 연비 기준 9.2㎞/ℓ다.
+                    아우디 고유의 사륜구동 시스템인 콰트로와 RS 스포츠 서스펜션을 적용해 민첩하고 스포티한 주행 성능과 동시에 승차감을 높였다.
+                     RS 스포츠 배기 시스템, 아우디 드라이브 셀렉트(3가지 RS 모드), 프로그레시브 스티어링 등이 탑재됐다.
+                    더 뉴 아우디 RS 3는 ‘A3’ 세단의 콤팩트한 비율과 스포티함을 RS 시그니쳐 디자인과 균형 있게 조합했다.
+                     가격은 부가세 포함 7695만9000원이다.
                 </div>
             </div>
         </section>
         <footer>
             <div id="down-container">
-                
+                <ul>
+                    <li>제작자: eastpillar</li>
+                    <li>문의 대표 번호: 010-1234-4321</li>
+                    <li>본 페이지는 수익을 창출하지 않습니다.</li>
+                </ul>
             </div>
         </footer>
     </div>
