--- a/vehicle-5.html
+++ b/vehicle-5.html
@@ -9,13 +9,11 @@
 </head>
 <body>
     <div id="container">
-        <div id="top-container">
-        <h1>EastPillar News</h1>
-        </div>
         <header id="header">
+            <h1>EastPillar News</h1>
             <div id="top-menubar">
                 <div class="top-menu"><a style="color: #37C6D0;"href="index.html">자동차 뉴스</a></div>
-                <div class="top-menu"><a href="#">12345</a></div>
+                <div class="top-menu"><a href="K-pop-main.html">K-pop 뉴스</a></div>
                 <div class="top-menu"><a href="#">12345</a></div>
                 <div class="top-menu"><a href="#">12345</a></div>
                 <div class="top-menu"><a class="last-kid" href="#">12345</a></div>
@@ -23,32 +21,39 @@
         </header>
         <aside id="left-side-bar">
             <div id="side-bar">
-                <div class="left-bar"><a href="vehicle-1.html"><img style="width:70px; height:46.797px" src="hyundai-logo2.svg"></a></div>
-                <div class="left-bar"><a href="vehicle-2.html"><img style="width:70px; height:46.797px" src="benz-logo.svg"></a></div>
-                <div class="left-bar"><a href="vehicle-3.html"><img style="width:70px; height:46.797px" src="bmw-logo.svg"></a></div>
-                <div class="left-bar"><a href="vehicle-4.html"><img style="width:70px; height:46.797px" src="audi-logo.svg"></a></div>
-                <div class="left-bar"><a class="last-kid" href="vehicle-5.html"><img style="width:70px; height:46.797px" src="polestar-logo.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-1.html"><img src="hyundai-logo2.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-2.html"><img src="benz-logo.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-3.html"><img src="bmw-logo.svg"></a></div>
+                <div class="left-bar"><a href="vehicle-4.html"><img src="audi-logo.svg"></a></div>
+                <div class="left-bar"><a class="last-kid" href="vehicle-5.html"><img src="polestar-logo.svg"></a></div>
             </div>
         </aside>
         <section id="contents">
             <div id="main-content">
-                <p class="main-title">현대자동차,'포니와 함께한 시간'사진 공모전 시상식 개최</p>
-                <img src="vehicle-1-image.jpeg" alt="">
+                <p class="main-title">디자인·주행 성능 눈길… 신규 구입자 할인 혜택</p>
+                <img src="polestar-news1.jpeg">
                 <div class="content-text">
-                포니와의 특별한 인연 소개한 심포니 씨가 대상 수상
-                현대자동차는 우리나라 첫 국산차 포니가 걸어온 길을 돌아보는 사진 공모전 ‘포니와 함께한 시간’을 마무리했다고 23일 밝혔다.
-                현대차는 3600여 건의 응모작과 사연을 접수해 대상 1명, 우수상 2명, 장려상 4명 등 총 7명을 시상했다.
-                대상은 포니를 좋아한 아버지가 지어준 이름으로 살아온 사연과 사진을 공모한 심포니 씨에게 돌아갔다. 
-                대상 수상자에게는 아이오닉 5가 증정됐다.
-                포니의 역사와 실제 차량 모습을 볼 수 있는 ‘포니의 시간’ 전시는 오는 10월 8일까지 서울 강남구 현대모터스튜디오 서울에서 진행된다.
-                현대차 관계자는 “포니는 대한민국 국민에게 자동차를 넘어 옛 시절을 추억하게 하는 매개체”라며 
-                “이번 전시와 공모전을 통해 많은 분들이 포니의 향수를 다시 한 번 느끼길 바란다”고 말했다.
+                    스웨덴의 프리미엄 전기차 브랜드 폴스타가 지난 13일부터 16일까지 열린 
+                    ‘2023 굿우드 페스티벌 오브 스피드’에서 선보인 SUV 폴스타3와 향후 출시 예정인 ‘폴스타5’가 주목을 끌고 있다.
+                    특히 내년 1분기 생산되는 폴스타3가 세계적으로 유명한 힐 클라임에서 환상적인 디자인과 다이내믹 주행 성능을 선보여 눈길을 사로잡았다.
+                     또 작년 처음 선보였던 폴스타5가 더 진보된 프로토 타입으로 공개돼 기대감을 더욱 높였다.
+                    2021년 12월 한국에 진출한 폴스타는 첫 순수 전기차 폴스타2를 현재까지 3000대 이상을 판매했다.
+                     폴스타는 한국소비자포럼과 브랜드키가 진행한 ‘2023 브랜드 고객충성도 대상’에서 
+                     전기차 부문 1위를 수상하며 높은 고객 만족도까지 증명했다.
+                    폴스타 코리아는 이를 기념해 이달 폴스타2 신규 고객을 대상으로 최대 11.5% 캐시백, 
+                    빠른 출고가 가능한 옵션 등이 미리 구성된 폴스타2를 약 10% 할인하고 있다.
+                    폴스타 코리아는 “하반기에는 앱스토어를 오픈하고 ‘인 카 페이먼트’ 기능 등 무선 
+                    소프트웨어 업데이트(OTA)를 통해 새로운 차원의 경험을 제공할 예정”이라고 밝혔다.
                 </div>
             </div>
         </section>
         <footer>
             <div id="down-container">
-                
+                <ul>
+                    <li>제작자: eastpillar</li>
+                    <li>문의 대표 번호: 010-1234-4321</li>
+                    <li>본 페이지는 수익을 창출하지 않습니다.</li>
+                </ul>
             </div>
         </footer>
     </div>
